--- a/example/flying_gazebo_stereo_cam/package.xml
+++ b/example/flying_gazebo_stereo_cam/package.xml
@@ -11,7 +11,6 @@
   
   
   
-  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend >urdf</build_depend>
@@ -37,6 +36,9 @@
   <run_depend >geometry_msgs</run_depend>
   <run_depend >sensor_msgs</run_depend>
 
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
 
 
