--- a/movements/CMakeLists.txt
+++ b/movements/CMakeLists.txt
@@ -1,28 +1,17 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(movements)
-set(CMAKE_BUILD_TYPE Release)
 
-list( APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+find_package(ament_cmake REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(angles REQUIRED)
 
-find_package(catkin REQUIRED COMPONENTS
-  angles
-  cmake_modules
-)
-
-find_package(Eigen REQUIRED)
-
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS angles
-  DEPENDS Eigen
-)
 
 include_directories(include
-  ${catkin_INCLUDE_DIRS}
   ${Eigen_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
 )
+
+INCLUDE_DIRECTORIES ( "$ENV{EIGEN3_INCLUDE_DIR}" )
 
 file(GLOB ${PROJECT_NAME}_CODE_BASE
   "src/*.cpp"
@@ -32,6 +21,16 @@ add_library(${PROJECT_NAME}
   ${${PROJECT_NAME}_CODE_BASE}
 )
 
-target_link_libraries(${PROJECT_NAME}
-   ${catkin_LIBRARIES}
+
+ament_target_dependencies(${PROJECT_NAME}
+  geometry_msgs
+  angles
 )
+
+# target_link_libraries(${PROJECT_NAME}_CODE_BASE)
+
+
+ament_export_dependencies(angles)
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
+ament_package()
