--- a/movements/package.xml
+++ b/movements/package.xml
@@ -6,8 +6,19 @@
   <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
   <license>LGPLv3</license>
   <author email="islerstefan@bluewin.ch">Stefan Isler</author>
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>cmake_modules</build_depend>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
   <build_depend>angles</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>cmake_modules</build_depend>
+  
+  <run_depend>cmake_modules</run_depend>
   <run_depend>angles</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+
+  <export>
+  <build_type>ament_cmake</build_type>
+  </export>
+
 </package>
