--- a/ig_active_reconstruction_ros/CMakeLists.txt
+++ b/ig_active_reconstruction_ros/CMakeLists.txt
@@ -1,46 +1,25 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(ig_active_reconstruction_ros)
-set(CMAKE_BUILD_TYPE Release)
 
-list( APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_STANDARD 17)
 
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  ig_active_reconstruction_msgs
-  ig_active_reconstruction
-  movements
-)
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(ig_active_reconstruction_msgs REQUIRED)
+find_package(ig_active_reconstruction REQUIRED)
+find_package(movements REQUIRED)
 
-
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS
-    roscpp
-    ig_active_reconstruction_msgs
-    ig_active_reconstruction
-    movements
-)
-
-include_directories(include
-  ${catkin_INCLUDE_DIRS}
-)
 
 file(GLOB ${PROJECT_NAME}_CODE_BASE
   "src/code_base/*.cpp"
 )
 
+
 add_library(${PROJECT_NAME} STATIC
   ${${PROJECT_NAME}_CODE_BASE}
 )
 
-target_link_libraries(${PROJECT_NAME}
-   ${catkin_LIBRARIES}
-)
-
-add_dependencies(${PROJECT_NAME} 
- ${catkin_EXPORTED_TARGETS}
-)
 
 # Executables...........................................................
 
@@ -48,21 +27,24 @@ add_executable(basic_view_planner
   src/ros_nodes/basic_view_planner.cpp
   ${${PROJECT_NAME}_CODE_BASE}
 )
-target_link_libraries(basic_view_planner
-   ${catkin_LIBRARIES}
+ament_target_dependencies(basic_view_planner
+  rclcpp
 )
-add_dependencies(basic_view_planner
- ${catkin_EXPORTED_TARGETS}
-)
-
 
 add_executable(simple_viewspace_module
   src/ros_nodes/simple_viewspace_module.cpp
   ${${PROJECT_NAME}_CODE_BASE}
 )
-target_link_libraries(simple_viewspace_module
-   ${catkin_LIBRARIES}
+ament_target_dependencies(simple_viewspace_module
+ rclcpp
 )
-add_dependencies(simple_viewspace_module
- ${catkin_EXPORTED_TARGETS}
+
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
+ament_export_dependencies(
+  movements
+  roscpp
+  ig_active_reconstruction_msgs
+  ig_active_reconstruction
 )
+ament_package()
