--- a/ig_active_reconstruction_ros/package.xml
+++ b/ig_active_reconstruction_ros/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>ig_active_reconstruction_ros</name>
   <version>0.9.0</version>
   <description>ROS nodes and classes for active 3D reconstruction. It uses the interfaces as defined in the paper
@@ -15,16 +15,11 @@
   <author email="islerstefan@bluewin.ch">Stefan Isler</author>
 
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>ig_active_reconstruction_msgs</build_depend>
-  <build_depend>ig_active_reconstruction</build_depend>
-  <build_depend>movements</build_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>roscpp</depend>
+  <depend>ig_active_reconstruction_msgs</depend>
+  <depend>ig_active_reconstruction</depend>
+  <depend>movements</depend>
   
-  <run_depend>roscpp</run_depend>
-  <run_depend>ig_active_reconstruction_msgs</run_depend>
-  <run_depend>ig_active_reconstruction</run_depend>
-  <run_depend>movements</run_depend>
-
-
 </package>
