--- a/ig_active_reconstruction_ros/CMakeLists.txt
+++ b/ig_active_reconstruction_ros/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(rclcpp_components REQUIRED)
 find_package(ig_active_reconstruction_msgs REQUIRED)
 find_package(ig_active_reconstruction REQUIRED)
 find_package(movements REQUIRED)
+find_package(Boost REQUIRED COMPONENTS thread chrono)
 
 INCLUDE_DIRECTORIES ( "$ENV{EIGEN3_INCLUDE_DIR}" )
 
@@ -20,13 +21,17 @@ file(GLOB ${PROJECT_NAME}_CODE_BASE
 add_library(${PROJECT_NAME}
   ${${PROJECT_NAME}_CODE_BASE}
 )
+
 ament_target_dependencies(${PROJECT_NAME}
   rclcpp
   ig_active_reconstruction_msgs
   ig_active_reconstruction
+  movements
+  
 )
 
 include_directories(include
+  ${Boost_INCLUDE_DIRS}
 #  ig_active_reconstruction_msgs_INCLUDE_DIRS
 )
 
@@ -40,7 +45,13 @@ ament_target_dependencies(basic_view_planner
   rclcpp
   ig_active_reconstruction_msgs
   ig_active_reconstruction
+  movements
 )
+target_link_libraries(basic_view_planner
+  ${Boost_LIBRARIES}
+)
+
+
 add_executable(simple_viewspace_module
   src/ros_nodes/simple_viewspace_module.cpp
   ${${PROJECT_NAME}_CODE_BASE}
@@ -49,6 +60,7 @@ ament_target_dependencies(simple_viewspace_module
   rclcpp
   ig_active_reconstruction_msgs
   ig_active_reconstruction
+  movements
 )
 
 ament_export_include_directories(include)
