It finally compiles!! Lets fix some runtime issues

--- a/ig_active_reconstruction_octomap/CMakeLists.txt
+++ b/ig_active_reconstruction_octomap/CMakeLists.txt
@@ -1,51 +1,29 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(ig_active_reconstruction_octomap)
-set(CMAKE_BUILD_TYPE Release)
 
 ## c++11 is preferred but ROS is built with c++03 and the PCL binaries are not compatible (boost)
 ##list( APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
-find_package(catkin REQUIRED COMPONENTS
-  cmake_modules
-  movements
-  ig_active_reconstruction
-  roscpp
-  ig_active_reconstruction_ros
-  ig_active_reconstruction_msgs
-  sensor_msgs
-  tf
-  pcl_ros
-  visualization_msgs
-  geometry_msgs
-  std_msgs
-)
+set(CMAKE_CXX_STANDARD 17)
 
+find_package(ament_cmake REQUIRED)
+find_package(ig_active_reconstruction REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(ig_active_reconstruction_ros REQUIRED)
+find_package(movements REQUIRED)
+find_package(ig_active_reconstruction_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(visualization_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(octomap REQUIRED)
 find_package(Boost REQUIRED)
 find_package(PCL 1.7 REQUIRED)
 find_package(Eigen REQUIRED)
 
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS
-    movements
-    ig_active_reconstruction
-    roscpp
-    ig_active_reconstruction_ros
-    ig_active_reconstruction_msgs
-    sensor_msgs
-    tf
-    pcl_ros
-    visualization_msgs
-    geometry_msgs
-    std_msgs
-  DEPENDS
-    PCL
-    Eigen
-    octomap
-    Boost
-)
 
 include_directories(include
   ${catkin_INCLUDE_DIRS}
@@ -61,7 +39,6 @@ file(GLOB ${PROJECT_NAME}_CODE_BASE
 )
 
 set(${PROJECT_NAME}_LIBRARIES
-   ${catkin_LIBRARIES}
    ${PCL_LIBRARIES}
    ${OCTOMAP_LIBRARIES}
    ${Boost_LIBRARIES}
@@ -75,9 +52,17 @@ add_library(${PROJECT_NAME} STATIC
 target_link_libraries(${PROJECT_NAME}
    ${${PROJECT_NAME}_LIBRARIES}
 )
-
-add_dependencies(${PROJECT_NAME} 
- ${catkin_EXPORTED_TARGETS}
+ament_target_dependencies(${PROJECT_NAME}
+  rclcpp
+  ig_active_reconstruction_ros
+  ig_active_reconstruction_msgs
+  ig_active_reconstruction
+  movements
+  tf2
+  tf2_ros
+  sensor_msgs
+  pcl_ros
+  visualization_msgs
 )
 
 # Executables...........................................................
@@ -89,6 +74,38 @@ add_executable(octomap_world_representation
 target_link_libraries(octomap_world_representation
    ${${PROJECT_NAME}_LIBRARIES}
 )
-add_dependencies(octomap_world_representation
- ${catkin_EXPORTED_TARGETS}
+ament_target_dependencies(octomap_world_representation
+  rclcpp
+  ig_active_reconstruction_ros
+  ig_active_reconstruction_msgs
+  ig_active_reconstruction
+  movements
+  tf2
+  tf2_ros
+  sensor_msgs
+  pcl_ros
+  visualization_msgs
 )
+
+# Launch files...........................................................
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+ament_export_include_directories(include)
+ament_export_libraries(${PROJECT_NAME})
+ament_export_dependencies(
+  movements
+  ig_active_reconstruction
+  rclcpp
+  ig_active_reconstruction_ros
+  ig_active_reconstruction_msgs
+  sensor_msgs
+  tf2
+  pcl_ros
+  visualization_msgs
+  geometry_msgs
+  std_msgs
+)
+ament_package()
