--- a/ig_active_reconstruction_octomap/package.xml
+++ b/ig_active_reconstruction_octomap/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>ig_active_reconstruction_octomap</name>
   <version>0.9.0</version>
   <description>Package providing an octomap based world representation implementation for ig_active_reconstruction and ROS interfaces to go with it.
@@ -15,30 +15,18 @@
   <author email="islerstefan@bluewin.ch">Stefan Isler</author>
 
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>movements</build_depend>
-  <build_depend>ig_active_reconstruction</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>ig_active_reconstruction_ros</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>ig_active_reconstruction_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>visualization_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  
-  <run_depend>movements</run_depend>
-  <run_depend>ig_active_reconstruction</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>ig_active_reconstruction_ros</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>ig_active_reconstruction_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>visualization_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>movements</depend>
+  <depend>ig_active_reconstruction</depend>
+  <depend>rclcpp</depend>
+  <depend>ig_active_reconstruction_ros</depend>
+  <depend>sensor_msgs</depend>
+  <depend>ig_active_reconstruction_msgs</depend>
+  <depend>tf</depend>
+  <depend>pcl_ros</depend>
+  <depend>visualization_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
 
 
 </package>
