--- a/ig_active_reconstruction/package.xml
+++ b/ig_active_reconstruction/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
   <name>ig_active_reconstruction</name>
   <version>0.9.0</version>
   <description>Package defining common interfaces and providing common tools for active 3D reconstruction as defined in the paper
@@ -15,10 +15,7 @@
   <author email="islerstefan@bluewin.ch">Stefan Isler</author>
 
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>movements</build_depend>
-  
-  <run_depend>movements</run_depend>
-
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>movements</depend>
 
 </package>
