--- a/ig_active_reconstruction_msgs/CMakeLists.txt
+++ b/ig_active_reconstruction_msgs/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 
 set(msg_files
   "msg/InformationGain.msg"
