--- a/ig_active_reconstruction_octomap/CMakeLists.txt
+++ b/ig_active_reconstruction_octomap/CMakeLists.txt
@@ -22,13 +22,12 @@ find_package(std_msgs REQUIRED)
 find_package(octomap REQUIRED)
 find_package(Boost REQUIRED)
 find_package(PCL 1.7 REQUIRED)
-#find_package(Eigen REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 
 include_directories(include
-  ${catkin_INCLUDE_DIRS}
   ${PCL_INCLUDE_DIRS}
-  ${Eigen_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
   ${OCTOMAP_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
 )
@@ -88,7 +87,7 @@ ament_target_dependencies(octomap_world_representation
 
 # Launch files...........................................................
 install(
-  DIRECTORY launch/
+  DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
 )
 
