--- a/movements/CMakeLists.txt
+++ b/movements/CMakeLists.txt
@@ -6,14 +6,13 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(ament_cmake REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(angles REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 
 include_directories(include
-  #${Eigen_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
 )
-
-INCLUDE_DIRECTORIES ( "$ENV{EIGEN3_INCLUDE_DIR}" )
 
 file(GLOB ${PROJECT_NAME}_CODE_BASE
   "src/*.cpp"
