--- a/ig_active_reconstruction/package.xml
+++ b/ig_active_reconstruction/package.xml
@@ -18,4 +18,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>movements</depend>
 
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
